load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "backfill_trigger.go",
        "controller.go",
        "cron_trigger.go",
        "module.go",
        "runner.go",
        "util.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/triggerrun",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/api/handler:go_default_library",
        "//go/api/utils:go_default_library",
        "//go/base/workflowclient/interface:go_default_library",
        "//go/cascadedelete:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "backfill_trigger_test.go",
        "cascade_test.go",
        "controller_test.go",
        "cron_trigger_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/api/handler:go_default_library",
        "//go/api/utils:go_default_library",
        "//go/base/workflowclient/interface:go_default_library",
        "//go/base/workflowclient/interface/interface_mock:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@com_github_go_logr_zapr//:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zaptest:go_default_library",
    ],
)
