load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/storage/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/api/utils:go_default_library",
        "//go/storage:go_default_library",
        "//proto/api:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/selection:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "mysql_integration_test.go",
        "mysql_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/api:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
    ],
)
