load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["module.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/worker/activities",
    visibility = ["//visibility:public"],
    deps = [
        "//go/worker/activities/cachedoutput:go_default_library",
        "//go/worker/activities/model:go_default_library",
        "//go/worker/activities/storage:go_default_library",
        "//go/worker/activities/trigger:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
