# gazelle:go_proto_compilers //bazel/rules/proto:go_kubeproto,//bazel/rules/proto:go_kubeconversion
# gazelle:go_grpc_compilers //bazel/rules/proto:go_kubeproto,//bazel/rules/proto:go_yarpc,//bazel/rules/proto:go_kubeyarpc,//bazel/rules/proto:go_validation,//bazel/rules/proto:go_kubeconversion
# gazelle:exclude michelangelo_v2mock.go
load("@io_bazel_rules_go//extras:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/rules/proto:kube_proto_sql.bzl", "kube_proto_sql")
load("//bazel/rules/proto:kube_proto_yaml.bzl", "kube_proto_yaml")

proto_library(
    name = "v2_proto",
    srcs = [
        "cached_output.proto",
        "cached_output_svc.proto",
        "chart.proto",
        "cluster.proto",
        "cluster_svc.proto",
        "deployment.proto",
        "deployment_svc.proto",
        "evaluation_report.proto",
        "evaluation_report_svc.proto",
        "git.proto",
        "groupversion_info.proto",
        "inference_server.proto",
        "inference_server_svc.proto",
        "job.proto",
        "kubernetes.proto",
        "lane_run.proto",
        "lane_run_svc.proto",
        "model.proto",
        "model_family.proto",
        "model_family_svc.proto",
        "model_svc.proto",
        "notification.proto",
        "parameter.proto",
        "pipeline.proto",
        "pipeline_run.proto",
        "pipeline_run_svc.proto",
        "pipeline_svc.proto",
        "pod.proto",
        "project.proto",
        "project_svc.proto",
        "ray_cluster.proto",
        "ray_cluster_svc.proto",
        "ray_job.proto",
        "ray_job_svc.proto",
        "revision.proto",
        "revision_svc.proto",
        "schema.proto",
        "spark_job.proto",
        "spark_job_svc.proto",
        "time.proto",
        "trigger_run.proto",
        "trigger_run_svc.proto",
        "user.proto",
    ],
    import_prefix = "michelangelo",
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/api:api_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@io_k8s_api//core/v1:v1_proto",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:v1_proto",
    ],
)

go_proto_library(
    name = "v2_go_proto",
    compilers = [
        "//bazel/rules/proto:go_kubeproto",
        "//bazel/rules/proto:go_yarpc",
        "//bazel/rules/proto:go_kubeyarpc",
        "//bazel/rules/proto:go_validation",
        "//bazel/rules/proto:go_kubeconversion",  # Required for Hub() method
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/proto-go/api/v2",
    proto = ":v2_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/api:go_default_library",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":v2_go_proto"],
    importpath = "github.com/michelangelo-ai/michelangelo/proto-go/api/v2",
    visibility = ["//visibility:public"],
)

kube_proto_yaml(
    name = "v2_kube_proto_yaml",
    visibility = ["//visibility:public"],
    deps = [":v2_proto"],
)

kube_proto_sql(
    name = "v2_kube_proto_sql",
    visibility = ["//visibility:public"],
    deps = [":v2_proto"],
)

gomock(
    name = "michelangelo_v2_gomock",
    out = "michelangelo_v2mock.go",
    interfaces = [
        "RayClusterServiceYARPCClient",
        "RayJobServiceYARPCClient",
        "SparkJobServiceYARPCClient",
        "CachedOutputServiceYARPCClient",
        "PipelineRunServiceYARPCClient",
        "ModelServiceYARPCClient",
        "DeploymentServiceYARPCClient",
        "RevisionServiceYARPCClient",
    ],
    library = ":go_default_library",
    package = "v2mock",
    self_package = "mock/github.com/michelangelo-ai/michelangelo/proto-go/api/v2/v2mock",
)

go_library(
    name = "go_michelangelo_v2_gomock_library",
    srcs = ["michelangelo_v2mock.go"],
    importpath = "mock/github.com/michelangelo-ai/michelangelo/proto-go/api/v2/v2mock",
    visibility = ["//visibility:public"],
    deps = [
        ":go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@org_uber_go_yarpc//:go_default_library",
    ],
)
