load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/common/routing",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//dynamic:go_default_library",
    ],
)
