load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
        "module.go",
        "publisher.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/inferenceserver/endpoints",
    visibility = ["//visibility:public"],
    deps = [
        "//go/base/config:go_default_library",
        "//proto/api/v2:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["publisher_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//proto/api/v2:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//discovery/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
