load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "helper.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/jobs/client",
    visibility = ["//visibility:public"],
    deps = [
        "//go/components/jobs/client/k8sengine:go_default_library",
        "//go/components/jobs/common/constants:go_default_library",
        "//go/components/jobs/common/secrets:go_default_library",
        "//go/components/jobs/common/types:go_default_library",
        "//go/components/jobs/compute:go_default_library",
        "//go/components/ray/kuberay:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_ray_project_kuberay_ray_operator//apis/ray/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_utils//ptr:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/components/jobs/common/constants:go_default_library",
        "//go/components/jobs/common/secrets:go_default_library",
        "//go/components/jobs/common/types:go_default_library",
        "//go/components/jobs/common/types/typesmocks:go_default_library",
        "//go/components/jobs/compute:go_default_library",
        "//go/components/jobs/compute/computemocks:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_ray_project_kuberay_ray_operator//apis/ray/v1:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//discovery:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//rest/fake:go_default_library",
        "@org_uber_go_zap//zaptest:go_default_library",
    ],
)
