load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "executeworkflow.go",
        "imagebuild.go",
        "sourcepipeline.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/pipelinerun/actors",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api:go_default_library",
        "//go/base/blobstore:go_default_library",
        "//go/base/conditions/engine:go_default_library",
        "//go/base/conditions/interfaces:go_default_library",
        "//go/base/config:go_default_library",
        "//go/base/workflowclient/interface:go_default_library",
        "//go/components/pipelinerun/actors/utils:go_default_library",
        "//go/worker/workflows/trigger:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "executeworkflow_test.go",
        "imagebuild_test.go",
        "sourcepipeline_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/api:go_default_library",
        "//go/api/handler:go_default_library",
        "//go/base/blobstore:go_default_library",
        "//go/base/blobstore/blobstore_mocks:go_default_library",
        "//go/base/conditions/engine:go_default_library",
        "//go/base/conditions/utils:go_default_library",
        "//go/base/workflowclient/interface:go_default_library",
        "//go/base/workflowclient/interface/interface_mock:go_default_library",
        "//go/components/pipelinerun/actors/utils:go_default_library",
        "//go/worker/workflows/trigger:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_gogo_protobuf//jsonpb:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@org_uber_go_config//:go_default_library",
        "@org_uber_go_zap//zaptest:go_default_library",
    ],
)
