load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "interface.go",
        "module.go",
    ],
    importpath = "github.com/michelangelo-ai/michelangelo/go/components/spark/job",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/utils:go_default_library",
        "//go/base/env:go_default_library",
        "//go/components/jobs/common/constants:go_default_library",
        "//go/components/jobs/common/utils:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["controller_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/api/utils:go_default_library",
        "//go/components/jobs/common/constants:go_default_library",
        "//go/components/spark/job/jobmocks:go_default_library",
        "//go/components/testfakes:go_default_library",
        "//proto/api:go_default_library",
        "//proto/api/v2:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
