load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["activities.go"],
    importpath = "github.com/michelangelo-ai/michelangelo/go/worker/activities/notification",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cadence_workflow_starlark_worker//activity:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["activities_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
